--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,42 @@
 Brotli==1.0.9
+cachetools==4.1.1
+certifi==2020.11.8
+chardet==3.0.4
 click==7.1.2
-dash==1.16.0
-dash-bootstrap-components==0.10.5
-dash-core-components==1.12.0
+dash==1.17.0
+dash-bootstrap-components==0.10.7
+dash-core-components==1.13.0
 dash-html-components==1.1.1
-dash-renderer==1.8.0
-dash-table==4.10.1
+dash-renderer==1.8.3
+dash-table==4.11.0
 Flask==1.1.2
-Flask-Compress==1.5.0
+Flask-Compress==1.8.0
 future==0.18.2
-gunicorn==20.0.4
+google-api-core==1.23.0
+google-api-python-client==1.12.8
+google-auth==1.23.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+googleapis-common-protos==1.52.0
+httplib2==0.18.1
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-numpy==1.19.1
-pandas==1.1.1
-plotly==4.9.0
+numpy==1.19.4
+oauthlib==3.1.0
+pandas==1.1.4
+plotly==4.13.0
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 python-dateutil==2.8.1
-pytz==2020.1
+pytz==2020.4
+requests==2.25.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
+rsa==4.6
 six==1.15.0
+uritemplate==3.0.1
+urllib3==1.26.2
 Werkzeug==1.0.1
